@@ -1,5 +1,8 @@
 debian/bash_completion/a2enmod			/usr/share/bash-completion/completions/
-debian/config-dir/*				/etc/apache2
+debian/config-dir/*.conf			/etc/apache2
+debian/config-dir/*-available			/etc/apache2
+debian/config-dir/magic				/etc/apache2
+debian/config-dir/envvars			/etc/apache2
 debian/a2enmod					/usr/sbin
 debian/apache2ctl				/usr/sbin
 debian/a2query					/usr/sbin
