@@ -6,6 +6,8 @@ apache2 (2.4.20-1) UNRELEASED; urgency=medium
   * Correct systemd-sysv-generator behavior by customizing some parameters.
     This fixes 'systemctl status' returning incorrect results. Thanks to
     Pierre-André MOREY for the patch. LP: #1488962
+  * On Linux, use pthread mutexes. On kfreebsd/hurd, continue using fctnl
+    because they lack robust pthred mutexes. LP: #1565744, #1527044
 
  -- Stefan Fritsch <sf@debian.org>  Sat, 09 Apr 2016 13:41:04 +0200
 
